k8s/services/base/myapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myapp-app
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: api
    app.kubernetes.io/version: '2.0.0'

spec:
  replicas: 6
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: api
    spec:
      serviceAccountName: myapp-sa
      containers:
        - name: app
          image: learningcloudnativego/myapp-app:2.0.0
          imagePullPolicy: IfNotPresent
          command: [ /myapp/app ]
          ports:
            - name: httpport
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
