k8s/services/base/myapp/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: myapp

spec:
  ports:
    - port: 8001
      targetPort: httpport # Matches the name in Deployment
      name: http
  selector:
    app: myapp
    component: app
